--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -6,7 +6,7 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Recipes">
+    tools:context=".activities.RecipesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
