--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -6,13 +6,14 @@
     android:id="@+id/coordinator"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="br.com.felipeacerbi.reciper.activities.NewRecipeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_height="@dimen/app_bar_height"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlayNoColor">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -28,9 +29,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:transitionName="photo"
-                android:fitsSystemWindows="true"
-                android:src="@drawable/cake"
-                app:layout_collapseMode="parallax"/>
+                android:src="@drawable/cake"/>
 
             <TextView
                 android:id="@+id/scrimTool"
@@ -62,15 +61,15 @@
 
     <include layout="@layout/content_new_recipe" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:theme="@style/AppTheme"
-        android:scaleType="center"
-        android:src="@drawable/plus_sign" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginEnd="@dimen/fab_margin"-->
+        <!--app:layout_anchor="@id/app_bar"-->
+        <!--app:layout_anchorGravity="bottom|end"-->
+        <!--app:theme="@style/AppTheme"-->
+        <!--android:scaleType="center"-->
+        <!--android:src="@drawable/plus_sign" />-->
 
 </android.support.design.widget.CoordinatorLayout>
