--- a/app/src/main/res/layout/content_new_recipe.xml
+++ b/app/src/main/res/layout/content_new_recipe.xml
@@ -14,47 +14,8 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/collection_photo"
             android:background="@android:color/white"
             android:orientation="vertical" >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:background="@null"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/category_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="72dp"
-                    android:gravity="center"
-                    android:layout_marginLeft="16dp"
-                    android:scaleType="fitCenter"
-                    android:alpha="0.54"
-                    android:src="@drawable/ic_style_black_24dp"/>
-                <ImageView
-                    android:id="@+id/add_category_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="72dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="@dimen/margin_medium"
-                    android:layout_alignParentEnd="true"
-                    android:scaleType="fitCenter"
-                    android:alpha="0.54"
-                    android:background="?attr/selectableItemBackground"
-                    android:src="@drawable/ic_add_circle_black_24dp"/>
-                <TextView
-                    android:id="@+id/collection_category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_toRightOf="@id/category_icon"
-                    android:layout_toLeftOf="@id/add_category_icon"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:textSize="18sp"
-                    android:textColor="@android:color/black"
-                    android:background="?attr/selectableItemBackground"/>
-            </RelativeLayout>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -69,19 +30,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:scaleType="fitCenter"
                     android:alpha="0.54"
                     android:src="@drawable/ic_description_black_24dp"/>
                 <EditText
-                    android:id="@+id/collection_title"
+                    android:id="@+id/recipe_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:layout_gravity="center"
-                    android:hint="Collection Title"
+                    android:hint="@string/recipe_name_hint"
                     android:background="@null"
-                    android:capitalize="sentences" />
+                    android:inputType="textCapSentences" />
             </LinearLayout>
             <ImageView
                 android:layout_width="match_parent"
@@ -89,19 +50,41 @@
                 android:layout_marginStart="56dp"
                 android:layout_marginEnd="@dimen/margin_medium"
                 android:background="@color/fadeImage"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recipe_ingredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:choiceMode="multipleChoice"
+                app:layoutManager="LinearLayoutManager"
+                android:scrollbars="none"
+                android:isScrollContainer="false">
+            </android.support.v7.widget.RecyclerView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:background="@color/fadeImage"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="56dp"
-                android:orientation="horizontal">
-                <EditText
-                    android:id="@+id/collection_description"
-                    android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="horizontal">>
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:paddingTop="22dp"
-                    android:hint="Collection Description"
-                    android:capitalize="sentences"
+                    android:layout_marginStart="16dp"
+                    android:scaleType="fitCenter"
+                    android:alpha="0.54"
+                    android:src="@drawable/ic_local_dining_black_24dp"/>
+                <EditText
+                    android:id="@+id/recipe_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_gravity="center"
+                    android:hint="@string/recipe_description_hint"
+                    android:inputType="textCapSentences"
                     android:background="@null" />
             </LinearLayout>
         </LinearLayout>
