--- a/app/src/main/res/layout/content_new_recipe.xml
+++ b/app/src/main/res/layout/content_new_recipe.xml
@@ -9,83 +9,203 @@
     android:background="@android:color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <LinearLayout
+        android:showDividers="middle"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:orientation="vertical" >
         <LinearLayout
-            android:showDividers="middle"
-            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:orientation="vertical" >
+            android:layout_height="72dp"
+            android:orientation="horizontal">
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginEnd="@dimen/margin_medium"
-                android:background="@color/fadeImage"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="16dp"
-                    android:scaleType="fitCenter"
-                    android:alpha="0.54"
-                    android:src="@drawable/ic_description_black_24dp"/>
-                <EditText
-                    android:id="@+id/recipe_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_gravity="center"
-                    android:hint="@string/recipe_name_hint"
-                    android:background="@null"
-                    android:inputType="textCapSentences" />
-            </LinearLayout>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginEnd="@dimen/margin_medium"
-                android:background="@color/fadeImage"/>
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recipe_ingredients"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.54"
+                android:src="@drawable/ic_description_black_24dp"/>
+            <EditText
+                android:id="@+id/recipe_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:choiceMode="multipleChoice"
-                app:layoutManager="LinearLayoutManager"
-                android:scrollbars="none"
-                android:isScrollContainer="false">
-            </android.support.v7.widget.RecyclerView>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginEnd="@dimen/margin_medium"
-                android:background="@color/fadeImage"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:orientation="horizontal">>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="16dp"
-                    android:scaleType="fitCenter"
-                    android:alpha="0.54"
-                    android:src="@drawable/ic_local_dining_black_24dp"/>
-                <EditText
-                    android:id="@+id/recipe_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_gravity="center"
-                    android:hint="@string/recipe_description_hint"
-                    android:inputType="textCapSentences"
-                    android:background="@null" />
-            </LinearLayout>
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:hint="@string/recipe_name_hint"
+                android:background="@null"
+                android:inputType="textCapSentences" />
         </LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@color/fadeImage"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.54"
+                android:src="@drawable/ic_style_black_24dp"/>
+            <TextView
+                android:id="@+id/recipe_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:text="Main Course"
+                android:background="@null" />
+        </LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@color/fadeImage"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.54"
+                android:src="@drawable/ic_whatshot_black_24dp"/>
+            <TextView
+                android:id="@+id/recipe_difficulty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:text="Casual"
+                android:background="@null" />
+        </LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@color/fadeImage"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp">
+            <ImageView
+                android:id="@+id/recipe_time_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.54"
+                android:src="@drawable/ic_alarm_black_24dp"/>
+            <TextView
+                android:id="@+id/recipe_time_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_alignParentEnd="true"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:text="Minutes"/>
+            <EditText
+                android:id="@+id/recipe_time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@id/recipe_time_icon"
+                android:layout_toStartOf="@id/recipe_time_unit"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:hint="@string/recipe_time_hint"
+                android:background="@null"
+                android:inputType="textCapSentences" />
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@color/fadeImage"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.54"
+                android:src="@drawable/ic_people_black_24dp"/>
+            <EditText
+                android:id="@+id/recipe_portions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:hint="@string/recipe_portions_hint"
+                android:background="@null"
+                android:inputType="textCapSentences" />
+        </LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@color/fadeImage"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recipe_ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:choiceMode="multipleChoice"
+            app:layoutManager="LinearLayoutManager"
+            android:scrollbars="none"
+            android:isScrollContainer="false">
+        </android.support.v7.widget.RecyclerView>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@color/fadeImage"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:orientation="horizontal">>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.54"
+                android:src="@drawable/ic_local_dining_black_24dp"/>
+            <EditText
+                android:id="@+id/recipe_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:hint="@string/recipe_description_hint"
+                android:inputType="textCapSentences"
+                android:background="@null" />
+        </LinearLayout>
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
